--- a/cmong/main.css
+++ b/cmong/main.css
@@ -235,67 +235,128 @@ span {
   margin: 10px 0px 10px 0px;
 }
 
-.main-section-container{
+
+.footer-container{
+  display: flex;
+  margin: 0px 120px 0px 120px;
+  padding: 32px 0px 94px 0px;
+}
+.footer-left-container{
   display: flex;
   flex-direction: column;
-  margin: 80px 0px 80px 0px;
+  column-gap: 20px;
 }
-
-.main-category-top-container{
+.footer-right-container{
   display: flex;
+  margin: 0px 0px 0px 60px 
+}
+.footer-right-list{
   list-style-type: none;
 }
-.main-readyto-category{
-  margin: 0px 120px 0px 120px;
+.footer-right-one{
+  margin:0px 45px 0px 45px;
 }
-.main-category-top{
-  background-color: rgb(250,250,252);
+.footer-right-two{
+  margin:0px 45px 0px 45px;
 }
-.main-category-bottom-container{
+.footer-right-three{
+  margin:0px 45px 0px 45px;
+}
+.footer-right-four{
+  margin:0px 0px 0px 45px;
+}
+.footer-right-head{
+  margin-bottom: 20px;
+  font-size: 14px;
+  font-weight: 700;
+}
+.footer-standard{
+  margin-bottom: 10px;
+  font-size: 14px;
+  font-weight: 400;
+  color: rgb(134, 134, 134);
+}
+.footer-standard-1{
+  margin-bottom: 10px;
+  font-size: 14px;
+  font-weight: 700;
+  color: rgb(134, 134, 134);
+}
+.footer-left-top-container{
   display: flex;
-  flex-direction: row;
+  gap: 10px;
+  margin-bottom: 20px; 
 }
-.main-category-bottom-first{
-  background-color: rgb(250,250,252);
-}
-.main-category-bottom-second{
-  background-color: rgb(250,250,252);
-}
-.main-category-bottom-first-container{
+.footer-left-top-box{
+  width: 146px;
+  height: 36px;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(200, 202, 210);
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 500;
   display: flex;
-  list-style: none;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s; 
 }
-.main-category-bottom-second-container{
+.footer-left-top-box:hover {
+  background-color: rgb(227, 227, 227); 
+}
+.footer-left-mid{
+  margin-bottom: 20px; 
+}
+.footer-left-mid-time{
+  font-size: 13px;
+}
+.footer-left-bottom-container{
+  margin-bottom: 20px; 
+  color: rgb(85, 89, 105);
+  font-weight: 400;
+}
+.footer-left-bottom-back{
   display: flex;
-  list-style: none;
+  background-color: rgb(247,251,255);
+  width: 300px;
+  padding:12px;
+  align-items: center; 
 }
-.main-category-unit{
-  list-style: none;
-}
-.main-bestservice-section{
-  margin: 80px 0px 80px 0px;
-  
-}
-.main-bestservice{
-  margin: 0px 120px 0px 120px;
-}
-.main-bestservice-bottom{
+.footer-left-bottom-left{
+  width: 36px;
+  height: 36px;
+  background-color: rgb(202, 226, 255); /* 파란색 배경 */
+  border-radius: 50%; 
   display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px; 
 }
-.main-bestservice-top-botton{
+.footer-left-bottom-left i {
+  color: white; /* 아이콘 색상 */
+  font-size: 18px; /* 아이콘 크기 */
+}
+.footer-left-bottom-right{
+  color:rgb(17, 106, 212);
+  font-size: 13px;
+  font-weight: 400;
+
+}
+.footer-bottom-container{
   display: flex;
+  flex-direction: column;
+  text-align: center;
 }
-.main-ineedpro-section{
-  margin: 80px 0px 80px 0px;
+.footer-bottom-1{
+  color: #727585;
+  font-size: 13px;
+  font-weight: 400;
+  margin: 16px auto 0px auto;
 }
-.main-ineedpro{
-  margin: 0px 120px 0px 120px;
-  padding: 0px 16px;
+.footer-bottom-2 {
+  font-size: 0.75rem;
+  color: #9a9ba7;
 }
-.main-livereview-section{
-  margin: 80px 0px 80px 0px;
-}
-.main-livereview{
-  margin: 0px 120px 0px 120px;
-  padding: 0px 16px;
+.footer-bottom-3 {
+  font-size: 0.75rem;
+  color: #9a9ba7;
 }
